--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,16 @@
 body {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
-  margin: 0;
+  margin: auto;
+  width: 95%;
+  padding: 10px;
 }
 
 #root {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 95vw;
   margin-bottom: 20px;
 }
 
