basic functionality in place for single article

--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,9 @@ li {
   font-weight: bolder;
   padding: 0 8px;
 }
+
+.article-image {
+  max-width: 80vw;
+  width: 500px;
+  border-radius: 15px;
+}
