--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,26 @@ li {
   font-size: large;
   font-weight: bold;
   margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.comment-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.comment-form label {
+  margin-right: 10px;
+  font-weight: 500;
+}
+
+.comment-form input {
+  width: 50vw;
+  max-width: 300px;
+}
+
+.comment-form button {
+  margin-left: 10px;
 }
 
 .comment-card {
