--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,16 @@ nav a {
   font-weight: bold;
 }
 
+a {
+  font-weight: bold;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .topic-filter {
   font-size: medium;
   padding: 0 5px;
@@ -62,6 +72,8 @@ fieldset {
 ul {
   list-style: none;
   padding: 0;
+  align-self: flex-start;
+  max-width: 630px;
 }
 
 li {
@@ -90,10 +102,39 @@ li {
   padding: 0 8px;
 }
 
+.single-article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.article-title {
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+.article-author {
+  margin: 0 5px;
+}
+
+.article-date {
+  font-size: small;
+}
+
+.article-topic {
+  margin: 5px 0;
+}
+
+.article-body {
+  max-width: 650px;
+  margin: 10px 0;
+}
+
 .article-image {
   max-width: 80vw;
   width: 500px;
   border-radius: 15px;
+  margin: 10px 0;
 }
 
 .comments-dropdown {
@@ -101,6 +142,7 @@ li {
   font-weight: bold;
   margin-top: 30px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .comment-form {
