--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,30 @@
 body {
-  background-color: #cdfff9e3;
+  background-color: #dabeca;
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
-  margin: auto;
-  width: 95%;
-  padding: 10px;
+  margin: 0;
 }
 
 #root {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 95vw;
-  margin-bottom: 20px;
+}
+
+h1 {
+  color: #5d5f71;
+  text-align: center;
+}
+
+a {
+  color: rgb(59, 0, 59);
 }
 
 nav {
   padding: 15px 0;
+  text-align: center;
+  background-color: #c79994;
+  width: 100vw;
 }
 
 nav a {
@@ -29,6 +37,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 90vw;
+  margin-bottom: 20px;
 }
 
 .topic-filter {
@@ -210,7 +220,7 @@ li {
 .article-card {
   border: 1px black solid;
   border-radius: 10px;
-  background-color: rgba(245, 245, 245, 0.678);
+  background-color: #e3d8f1;
   padding: 10px;
   margin: 5px 0;
 }
